# crypto_core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  deny.toml
.github/workflows/: audit.yml  cargo_tests.yml  ci.yml
benches/: benches.rs  dem.rs  ecies.rs  signature.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/benches/: benches.rs  ecies.rs
crates/core/examples/: main.rs
crates/core/src/: bytes_ser_de.rs  error.rs  kdf.rs  key.rs  lib.rs  secret.rs  traits.rs
crates/core/src/asymmetric_crypto/curves/curve_25519/: mod.rs
crates/core/src/asymmetric_crypto/curves/curve_25519/ed25519/: mod.rs  private_key.rs
crates/core/src/asymmetric_crypto/curves/curve_25519/ed25519/ed_dsa/: signer.rs
crates/core/src/asymmetric_crypto/curves/curve_25519/ristretto_25519/: mod.rs
crates/core/src/asymmetric_crypto/curves/nist/: mod.rs  test_pkcs8_openssl_compat.rs
crates/core/src/asymmetric_crypto/rsa/: private_key.rs
crates/core/src/asymmetric_crypto/rsa/tests/: pkcs8_tests.rs
crates/core/src/asymmetric_crypto/rsa/tests/openssl/: 32_byte.key  rsa_3072_bit.pub.pkcs8.pem
crates/core/src/ecies/: generic_ecies_aes128gcm.rs  mod.rs  traits.rs
crates/core/src/ecies/curve_25519/: ecies_salsa_sealed_box.rs  ecies_x25519_xchacha20.rs  mod.rs
crates/core/src/kdf/: sha3.rs
crates/core/src/symmetric_crypto/: aes_128_gcm.rs  aes_256_gcm.rs  dem.rs
crates/core/src/traits/: cyclic_group_to_kem.rs  kem_combiner.rs  kem_to_pke.rs  macros.rs  providers.rs  tests.rs
crates/openssl_provider/: CHANGELOG.md  Cargo.toml
crates/openssl_provider/src/: hash.rs  kem.rs  lib.rs  p256.rs
crates/openssl_provider/src/p256/: point.rs  scalar.rs
crates/rust_curve25519/: CHANGELOG.md  Cargo.toml
crates/rust_curve25519/src/: lib.rs  r25519.rs
crates/rust_curve25519/src/r25519/: point.rs  scalar.rs
crates/rust_nist_ec/: CHANGELOG.md  Cargo.toml
crates/rust_nist_ec/src/: lib.rs  p256.rs
crates/rust_nist_ec/src/p256/: point.rs  scalar.rs
examples/: demo.rs  main.rs
examples/examples/: ecies.rs  mod.rs  rsa_key_wrapping.rs  signature.rs  symmetric_crypto.rs
src/: asymmetric.rs  asymmetric_crypto.rs  blake2.rs  bytes.rs  bytes_ser_de.rs  entropy.rs  error.rs  kdf.rs  key.rs  lib.rs  pkcs8_fix.rs  secret.rs  traits.rs
src/asymmetric/: ristretto.rs
src/asymmetric_crypto/: curve25519.rs  dh_keypair.rs  ecies.rs  ecies_trait.rs  mod.rs  subject_public_key_info.rs  tests.rs
src/asymmetric_crypto/curve_25519/: curve_secret.rs  mod.rs  private_key.rs
src/asymmetric_crypto/curve_25519/ed25519/: mod.rs  private_key.rs  public_key.rs
src/asymmetric_crypto/curve_25519/ed25519/certificate/: encoding.rs  mod.rs
src/asymmetric_crypto/curve_25519/ed25519/ed_dsa/: key_pair.rs  mod.rs  signer.rs  verifier.rs
src/asymmetric_crypto/curve_25519/ed_25519/: ed25519.rs  mod.rs  public_key.rs
src/asymmetric_crypto/curve_25519/ristretto_25519/: curve_point.rs  ecies.rs  mod.rs  private_key.rs  public_key.rs
src/asymmetric_crypto/curve_25519/ristretto_25519/keys/: dh_keypair.rs  mod.rs  private_key.rs  public_key.rs
src/asymmetric_crypto/curve_25519/salsa_sealbox/: ecies.rs  mod.rs  private_key.rs  public_key.rs
src/asymmetric_crypto/curve_25519/x25519/: curve_point.rs  encoding.rs  key_pair.rs  mod.rs  private_key.rs  public_key.rs
src/asymmetric_crypto/curves/: mod.rs
src/asymmetric_crypto/curves/curve_25519/: curve_secret.rs  mod.rs
src/asymmetric_crypto/curves/curve_25519/ed25519/: private_key.rs  public_key.rs
src/asymmetric_crypto/curves/curve_25519/ed25519/certificate/: encoding.rs  mod.rs
src/asymmetric_crypto/curves/curve_25519/ed25519/ed_dsa/: mod.rs  signer.rs  verifier.rs
src/asymmetric_crypto/curves/curve_25519/ristretto_25519/: curve_point.rs  mod.rs  private_key.rs  r25519_point.rs
src/asymmetric_crypto/curves/curve_25519/x25519/: curve_point.rs  private_key.rs
src/asymmetric_crypto/curves/nist/: private_key.rs  public_key.rs  test_pkcs8_openssl_compat.rs
src/asymmetric_crypto/nist/: curve_point.rs  mod.rs  private_key.rs  public_key.rs  test_pkcs8_openssl_compat.rs
src/asymmetric_crypto/ristretto_25519/: ecies.rs  keypair.rs  mod.rs
src/asymmetric_crypto/ristretto_25519/keys/: dh_keypair.rs  mod.rs  public_key.rs
src/asymmetric_crypto/rsa/: mod.rs  private_key.rs  public_key.rs
src/asymmetric_crypto/rsa/tests/: key_wrapping.rs  mod.rs  pkcs8_tests.rs
src/asymmetric_crypto/rsa/tests/openssl/: 32_byte.key.oaep_sha256.enc  README.md  rsa_3072_bit.key.pkcs8.pem
src/asymmetric_crypto/salsa_sealbox/: ecies.rs  keypair.rs  mod.rs  private_key.rs
src/ecies/: ecies.rs  ecies_nist_old.rs  ecies_ristretto_25519.rs  ecies_ristretto_aes128gcm.rs  ecies_salsa_sealed_box.rs  ecies_traits.rs  ecies_x25519_xchacha20.rs  generic_ecies_aes128gcm.rs  mod.rs  tests.rs
src/ecies/curve_25519/: ecies_salsa_sealed_box.rs  ecies_x25519_xchacha20.rs  mod.rs  r25519.rs  x25519.rs
src/ecies/nist_curves/: keys.rs  mod.rs
src/kdf/: sha3.rs
src/symmetric_crypto/: aes_128_gcm.rs  aes_256_gcm.rs  block.rs  chacha20_poly1305.rs  dem.rs  key.rs  key_wrapping_rfc_5649.rs  metadata.rs  mod.rs  nonce.rs  xchacha20_poly1305.rs
src/symmetric_crypto/aes_256_gcm_pure/: dem.rs  mod.rs
src/traits/: cyclic_group_to_kem.rs  kem_to_pke.rs  tests.rs
