[workspace]
members = [
  "crates/core",
  "crates/openssl_provider",
  "crates/rust_nist_ec",
  "crates/rust_curve25519"
]
resolver = "2"

[workspace.package]
authors = [
  "Bruno GRIEDER <bruno.grieder@cosmian.com>",
  "Théophile BRÉZOT <theophile.brezot@cosmian.com>",
  "Emmanuel COSTE <emmanuel.coste@cosmian.com>",
]
categories = ["cryptography"]
edition = "2021"
keywords = ["cosmian", "crypto"]
license = "BUSL-1.1"
repository = "https://github.com/Cosmian/crypto_core/"
description = "Cosmian base cryptographic library"

[workspace.dependencies]
aead = "0.5"
aes-gcm = "0.10"
blake2 = "0.10"
chacha20 = "0.9"
chacha20poly1305 = "0.10"
crypto_box = "0.9.1"
curve25519-dalek = "4.1.3"
digest = "0.10"
ed25519-dalek = "2.2.0"
elliptic-curve = { version = "0.13.8", default-features = false }
gensym = "0.1.1"
getrandom = "0.2"
leb128 = "0.2"
p192 = "0.13"
p224 = "0.13"
p256 = "0.13"
p384 = "0.13"
pkcs8 = "0.10"
rand_chacha = "0.3"
rand_core = "0.6.4"
rsa = "0.9"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
signature = "2.2"
tiny-keccak = "2.0.2"
uuid = "=1.11"
x509-cert = "0.2.5"
zeroize = "1.8"
criterion = "0.6"
libc = "0.2"
libsodium-sys-stable = "1.23.1"
tempfile = "3.24"

[profile.bench]
debug = true
