[package]
name = "cosmian_rust_curve25519_provider"
version = "1.0.0"
authors = [
  "Théophile BRÉZOT <theophile.brezot@cosmian.com>",
]
categories = ["cryptography"]
edition = "2021"
keywords = ["cosmian", "crypto"]
license = "BUSL-1.1"
repository = "https://github.com/Cosmian/crypto_core/"
description = "Cosmian base cryptographic library"

[lib]
crate-type = ["lib", "staticlib"]
name = "cosmian_rust_curve25519_provider"
path = "src/lib.rs"

[dependencies]
cosmian_crypto_core = { path = "../core", version = "10.4", default-features = false, features = ["curve25519"] }
curve25519-dalek = { workspace = true, features = ["rand_core"] }
zeroize = { workspace = true }

[dev-dependencies]
cosmian_crypto_core = { path = "../core", version = "10.4", default-features = false, features = ["curve25519", "sha3"] }
