[package]
name = "cosmian_rust_nist_ec_provider"
version = "1.0.0"
authors = ["Théophile BRÉZOT <theophile.brezot@cosmian.com>"]
categories = ["cryptography"]
edition = "2021"
keywords = ["cosmian", "crypto"]
license = "BUSL-1.1"
repository = "https://github.com/Cosmian/crypto_core/"
description = "Cosmian base cryptographic library"

[lib]
crate-type = ["lib", "staticlib"]
name = "cosmian_rust_nist_ec_provider"
path = "src/lib.rs"

[dependencies]
cosmian_crypto_core = { path = "../core", version = "10.4" }
elliptic-curve = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
