[package]
name = "cosmian_rust_nist_ec_provider"
version = "1.0.0"
description = "Pure-Rust NIST elliptic-curves provider."

authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["lib", "staticlib"]
name = "cosmian_rust_nist_ec_provider"
path = "src/lib.rs"

[dependencies]
cosmian_crypto_core = { path = "../core", version = "11.0", default-features = false, features = ["curve25519"] }
elliptic-curve = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
zeroize = { workspace = true }
